# xmonad-profiles

./: .gitignore  .gitmodules  README.md  cabal.project  hie.yaml  install.sh  start.sh  xmonad.select  xmonad.setup  xmonad.start
commons/: .Xresources  startup-env.cfg  startup-install.sh  startup-run.sh
config-shared/: active-modules.yaml
config-user/: display-config.yaml
database/: .Xresources  active-modules.yaml  system-packages.yaml  template.desktop  x11-start.sh  xmonad-manage@.service  xsettingsd.conf
install/: Setup.hs
modules/compositor-picom/: module.yaml  run.sh
modules/display-lightdm/: install.sh  module.yaml  run.sh
modules/display-sddm/: module.yaml  run.sh
modules/input-ibus/: install.sh  module.yaml  run.sh
modules/keyring-gnome/: module.yaml  run.sh
modules/policykit-gnome/: module.yaml  run.sh
modules/policykit-kde/: module.yaml  run.sh
modules/x11-xmonad/: install.sh  module.yaml  run.sh  xsettingsd.conf
scripts/: Selector.hs
start-arch-sddm/: startup-install.sh  startup-run.sh  startup.yaml
start-basic/: install.sh  run.sh  startup.cfg  startup.yaml
start-lightdm/: .Xresources  startup-install.sh  startup-run.sh  startup.cfg  startup.yaml
xmonad-manage/: CHANGELOG.md  xmonad-manage.cabal
xmonad-manage/app/: Checked.hs  Common.hs  Component.hs  Config.hs  Main.hs  Manages.hs  Modules.hs  Packages.hs  Profile.hs  References.hs  Startup.hs  X11.hs
