cabal-version:      2.4
name:               xmonad-manage
version:            0.7.0.0
synopsis:           Xmonad profile manager
homepage:           https://github.com/Abastro/xmonad-profiles
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro
extra-source-files:
  CHANGELOG.md

executable xmonad-manage
  main-is:          Main.hs
  other-modules:
    Common
    Manages
    Packages
    Component
    Modules
    Profile
  default-extensions:
    LambdaCase
    RecordWildCards
    NoFieldSelectors
    OverloadedRecordDot
  build-depends:
      base ^>=4.17.1.0
    , filepath
    , directory
    , containers ==0.6.*
    , mtl >=2.2 && <2.4
    , bytestring ==0.11.*
    , text ==2.0.*
    , process ^>= 1.6.14
    , parsec  ==3.1.*
    , optparse-applicative ==0.17.*
    , HsYAML ==0.2.*
    , StateVar ==1.2.*
    , cereal ==0.5.*
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -W
